--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel ./index.html",
+    "build": "parcel build ./index.html"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,8 @@
   },
   "homepage": "https://github.com/antoinejaussoin/game-of-life#readme",
   "dependencies": {
+    "lodash": "^4.17.4",
     "moment": "^2.20.1",
-    "rollup": "^0.55.1"
+    "parcel-bundler": "^1.5.1"
   }
 }
