--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/antoinejaussoin/game-of-life#readme",
   "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "jest": "^22.1.4",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "parcel-bundler": "^1.5.1"
