--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "game-of-life",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Game of Life implementation",
   "main": "app.js",
   "scripts": {
     "start": "react-app-rewired start",
@@ -22,12 +22,9 @@
   "dependencies": {
     "babel-preset-env": "^1.6.1",
     "emotion": "^8.0.12",
-    "jest": "^22.1.4",
     "lodash": "^4.17.4",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
-    "moment": "^2.20.1",
-    "parcel-bundler": "^1.5.1",
     "react": "^16.2.0",
     "react-app-rewire-mobx": "^1.0.7",
     "react-app-rewired": "^1.4.1",
