--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-app-rewired": "^1.4.1",
     "react-dom": "^16.2.0",
     "react-emotion": "^8.0.12",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.0",
     "react-stats-zavatta": "^0.0.6"
   }
