--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "test": "web-test-runner \"src/**/*.test.ts\""
   },
   "dependencies": {
-    "svelte": "^3.24.0",
     "@snowpack/plugin-dotenv": "^2.0.5",
+    "@snowpack/plugin-postcss": "^1.1.0",
     "@snowpack/plugin-svelte": "^3.5.0",
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
@@ -15,9 +15,16 @@
     "@types/mocha": "^8.2.0",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
+    "autoprefixer": "^10.2.1",
     "chai": "^4.2.0",
+    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
+    "postcss-nesting": "^7.0.1",
+    "smelte": "^1.0.18",
     "snowpack": "^3.0.1",
+    "svelte": "^3.24.0",
     "svelte-preprocess": "^4.0.8",
+    "tailwindcss": "^2.0.2",
     "typescript": "^4.0.0"
   }
 }
