--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "game-of-life",
   "author": "Antoine Jaussoin",
+  "version": "2.0.0",
   "scripts": {
     "start": "snowpack dev",
     "build": "NODE_ENV=production snowpack build",
