--- a/package.json
+++ b/package.json
@@ -1,36 +1,33 @@
 {
   "name": "game-of-life",
-  "version": "1.0.0",
-  "description": "A Game of Life implementation",
-  "main": "app.js",
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/antoinejaussoin/game-of-life.git"
-  },
   "author": "Antoine Jaussoin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/antoinejaussoin/game-of-life/issues"
+  "version": "2.0.0",
+  "scripts": {
+    "start": "snowpack dev",
+    "build": "NODE_ENV=production snowpack build",
+    "test": "web-test-runner \"src/**/*.test.ts\""
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "emotion": "^8.0.12",
-    "lodash": "^4.17.4",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
-    "react": "^16.2.0",
-    "react-app-rewire-mobx": "^1.0.7",
-    "react-app-rewired": "^1.4.1",
-    "react-dom": "^16.2.0",
-    "react-emotion": "^8.0.12",
-    "react-fontawesome": "^1.6.1",
-    "react-scripts": "1.1.0",
-    "react-stats-zavatta": "^0.0.6"
+    "@bulatdashiev/svelte-slider": "^1.0.3",
+    "@snowpack/plugin-dotenv": "^2.0.5",
+    "@snowpack/plugin-postcss": "^1.1.0",
+    "@snowpack/plugin-svelte": "^3.5.0",
+    "@snowpack/plugin-typescript": "^1.2.0",
+    "@snowpack/web-test-runner-plugin": "^0.2.0",
+    "@testing-library/svelte": "^3.0.0",
+    "@types/chai": "^4.2.13",
+    "@types/mocha": "^8.2.0",
+    "@types/snowpack-env": "^2.3.2",
+    "@web/test-runner": "^0.12.0",
+    "autoprefixer": "^10.2.1",
+    "chai": "^4.2.0",
+    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
+    "postcss-nesting": "^7.0.1",
+    "snowpack": "^3.0.1",
+    "svelte": "^3.24.0",
+    "svelte-preprocess": "^4.0.8",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.0.0"
   }
 }
