--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@snowpack/web-test-runner-plugin": "^0.2.0",
     "@testing-library/svelte": "^3.0.0",
     "@types/chai": "^4.2.13",
+    "@types/lodash": "^4.14.168",
     "@types/mocha": "^8.2.0",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
     "autoprefixer": "^10.2.1",
     "chai": "^4.2.0",
+    "lodash": "^4.17.20",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "postcss-nesting": "^7.0.1",
