--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/chai": "^4.2.13",
     "@types/lodash": "^4.14.168",
     "@types/mocha": "^8.2.0",
+    "@types/numeral": "^0.0.29",
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
     "autoprefixer": "^10.2.1",
     "chai": "^4.2.0",
     "lodash": "^4.17.20",
+    "numeral": "^2.0.6",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "postcss-nesting": "^7.0.1",
