--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
   "name": "game-of-life",
+  "author": "Antoine Jaussoin",
   "private": true,
   "version": "3.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "vitest",
+    "ci-test": "CI=true vitest",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
     "@bulatdashiev/svelte-slider": "^1.0.3",
-    "@types/lodash": "^4.14.199",
-    "@types/numeral": "^2.0.3",
-    "lodash": "^4.17.21",
-    "numeral": "^2.0.6",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
+    "@types/lodash": "^4.14.199",
+    "@types/numeral": "^2.0.3",
     "autoprefixer": "^10.4.16",
+    "lodash": "^4.17.21",
+    "numeral": "^2.0.6",
     "postcss": "^8.4.31",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.6"
   }
 }
