--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,36 +9,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
+      - uses: actions/checkout@v3
       - name: Read VERSION
         id: package
-        uses: juliangruber/read-file-action@v1
-        with:
-          path: ./VERSION
-
+        uses: martinbeentjes/npm-get-version-action@master
       - name: Echo VERSION
-        run: echo ${{ steps.package.outputs.content }}
-
+        run: echo ${{ steps.package.outputs.current-version }}
       - name: Setup QEMU
         uses: docker/setup-qemu-action@master
         with:
           platforms: all
-
       - name: Setup BuildX
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
         id: buildx
         with:
           install: true
-
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build and push Frontend
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           builder: ${{ steps.buildx.outputs.name }}
           file: ./Dockerfile
