--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: [upgrade]
 
 jobs:
   build:
@@ -35,6 +35,6 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           file: ./Dockerfile
           context: .
-          tags: antoinejaussoin/game-of-life:latest,antoinejaussoin/game-of-life:${{ steps.package.outputs.content }}
+          tags: antoinejaussoin/game-of-life:canary
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
