--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           file: ./Dockerfile
           context: .
-          tags: antoinejaussoin/game-of-life:latest,antoinejaussoin/game-of-life:${{ steps.package.outputs.content }}
+          tags: antoinejaussoin/game-of-life:latest,antoinejaussoin/game-of-life:${{ steps.package.outputs.current-version }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
