--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "3.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "test": "vitest",
     "ci-test": "CI=true vitest",
