--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,8 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "baseUrl": "src"
   },
   "include": ["vite.config.ts"]
 }
