--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "game-of-life",
   "author": "Antoine Jaussoin",
   "private": true,
-  "version": "3.0.0",
+  "version": "3.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "test": "vitest",
     "ci-test": "CI=true vitest",
